SERVER-18455 stop logging sync_pullOpLog message in master slave