src/mongo/db/repl/master_slave.cpp
@@ -965,9 +965,7 @@ namespace repl {
 
                     syncedTo = nextOpTime;
                     save(txn); // note how far we are synced up to now
-                    log() << "repl:   applied " << n << " operations" << endl;
                     nApplied = n;
-                    log() << "repl:  end sync_pullOpLog syncedTo: " << syncedTo.toStringLong() << endl;
                     break;
                 }
 
